--- a/03AgeCalculator/index.html
+++ b/03AgeCalculator/index.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Age Calculator</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="container">
-        <h2>Age Calculator 📅</h2>
-       <div class="input-div">
-        <input type="date" name="Date of Birth" id="dob">
+      <h2>Age Calculator 📅</h2>
+      <div class="input-div">
+        <input type="date" name="Date of Birth" id="dob" />
         <button class="submit">Calculate</button>
-       </div>
-         <div class="output-div">
-            <div class="result">
-                <div class="header"></div>
-                <span class="yy">00</span>
-                <h3>Years</h3>
-            </div>
-            <div class="result">
-                <div class="header"></div>
-                <span class="mm">00</span>
-                <h3>Months</h3>
-            </div>
-            <div class="result">
-                <div class="header"></div>
-                <span class="dd">00</span>
-                <h3>Days</h3>
-            </div>
+      </div>
+      <div class="output-div">
+        <div class="result">
+          <div class="header"></div>
+          <span class="yy">00</span>
+          <h3>Years</h3>
+        </div>
+        <div class="result">
+          <div class="header"></div>
+          <span class="mm">00</span>
+          <h3>Months</h3>
+        </div>
+        <div class="result">
+          <div class="header"></div>
+          <span class="dd">00</span>
+          <h3>Days</h3>
+        </div>
+      </div>
+      <h4>Please Enter Date of Birth First... 😴</h4>
+      <button class="reset">Reset</button>
     </div>
-    <h4>Please Enter Date of Birth First... 😴</h4>
-    <button class="reset">Reset</button>
-  </div>
-</body>
-<script src="script.js"></script>
+  </body>
+  <script src="script.js"></script>
 </html>
